--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://apdo-elhogaraty.github.io/portfolio/",
+  "homepage": "https://apdo-elhogaraty.github.io/react_portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
